# eselect-java

./: AUTHORS  ChangeLog  ChangeLog.old.eselect-ecj  ChangeLog.old.eselect-java-nsplugin  ChangeLog.old.eselect-java-vm  ChangeLog.old.eselect-maven  Makefile.am  NEWS  README  configure.ac
src/modules/: Makefile.am  ecj.eselect.in  java-nsplugin.eselect.in  java-vm.eselect.in  maven.eselect.in
src/scripts/: run-java-tool.bash  run-java-tool.bash.in
