AC_INIT([eselect-java],[0.1.0],[java@gentoo.org],[eselect-java],[https://bugs.gentoo.org/])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([src/modules/java-vm.eselect.in])
AM_INIT_AUTOMAKE([1.11])

AC_PROG_LN_S
AC_PROG_MKDIR_P
AC_PROG_SED

AC_ARG_VAR([EPREFIX],[Gentoo Prefix offset])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
